--- a/Andrusha-main/sass/person.sass
+++ b/Andrusha-main/sass/person.sass
@@ -15,6 +15,9 @@
             line-height: 70px
             text-align: center
 
+            &:hover
+                text-shadow: 0px 0px 4px yellow
+
     &-item__img
         overflow: hidden
         border-radius: 50%
