--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -5,24 +5,19 @@
         padding-top: 100px
 
     &-item
+        margin-top: 25px
 
         &__article
-            width: 730px
-            height: 233px
-            //
-            position: relative
+            width: 749px
+            height: 224px
 
             &-active
-                width: 818px
-                height: 333px
-                background-image: url(../figma/Mediation/img/Meditation-item__article-active.svg)
-                margin-top: -100px
+                width: 749px
+                height: 224px
+                background-image: url(../figma/Mediation/img/Meditation-item__article-active-cut.png)
 
             &-title
-                position: absolute
-                top: 35px
-                left: 70px
-                padding-top: 35px
+                padding-top: 50px
                 padding-left: 70px
                 font-family: Heebo
                 font-weight: 500
@@ -30,9 +25,6 @@
                 text-align: left
                 text-shadow: none
                 color: rgba(0, 0, 0, 0.8)
-                position: absolute
-                top: 35px
-                left: 70px
 
             &-text
                 padding-top: 10px
@@ -44,6 +36,45 @@
                 width: 689px
                 height: 116px
                 color: rgba(0, 0, 0, 0.5)
-                position: absolute
-                top: 92px
-                left: 70px
+
+@media (max-width: 830px)
+    .Meditation
+        &-wrapper
+            padding-top: 0px
+        &-item
+            margin-top: 0
+            img
+                width: 100%
+                height: 100%
+
+            &__wrapper
+                margin-top: 0px
+
+            &__article
+                width: auto
+                height: auto
+                padding: 10px
+                margin: 10px 0
+                &-active
+                    background-image: none
+                    border-radius: 15px
+                    background: linear-gradient(0deg, #C3EEE8 26.37%, rgba(195, 226, 222, 0.75) 63.87%, rgba(231, 243, 242, 0.4) 103.6%)
+
+                &-title
+                    padding-top: 10px
+                    padding-left: 10px
+
+                &-text
+                    width: auto
+                    height: auto
+                    padding-left: 10px
+
+@media (max-width: 740px)
+    .Meditation-item__article-title
+        text-align: center
+        font-size: 30px
+
+    .Meditation-item__article-text
+        text-align: center
+        font-size: 20px
+        line-height: 25px
