--- a/figma/Mediation/sass/Meditation-music.sass
+++ b/figma/Mediation/sass/Meditation-music.sass
@@ -61,6 +61,7 @@
                 font-size: 48px
                 padding: 20px
                 box-shadow: 0px 25px 30px rgba(179, 228, 221, 0.3), 0px 9px 24px rgba(26, 127, 114, 0.23)
+                transition: 0.5s
 
                 &:hover
                     box-shadow: 0px 0px 50px #268a79
