--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -15,6 +15,10 @@
                 width: 749px
                 height: 224px
                 background-image: url(../figma/Mediation/img/Meditation-item__article-active-cut.png)
+                &-arrow
+                    display: flex !important
+                    justify-content: flex-end
+                    padding-right: 70px
 
             &-title
                 padding-top: 50px
@@ -36,6 +40,9 @@
                 width: 689px
                 height: 116px
                 color: rgba(0, 0, 0, 0.5)
+
+            &-active-arrow
+                display: none !important
 
 @media (max-width: 830px)
     .Meditation
