--- a/figma/Mediation/sass/papers.sass
+++ b/figma/Mediation/sass/papers.sass
@@ -15,13 +15,13 @@
         background-repeat: no-repeat
 
         &-1
-            background-image: url(../figma/Mediation/img/Paper-1-background.png)
+            background-image: url(../figma/Mediation/img/Paper-1-background.svg)
 
         &-2
-            background-image: url(../figma/Mediation/img/Paper-2-background.png)
+            background-image: url(../figma/Mediation/img/Paper-2-background.svg)
 
         &-3
-            background-image: url(../figma/Mediation/img/Paper-3-background.png)
+            background-image: url(../figma/Mediation/img/Paper-3-background.svg)
 
         img
             margin: 0 auto
@@ -56,10 +56,34 @@
             color: white
             font-weight: 400
             font-size: 24px
-            line-height: 48px
+            line-height: 53px
             margin: 0 auto
             margin-top: 50px
             transition: 0.5s
 
             &:hover
                 box-shadow: 0px 0px 50px #268a79
+
+@media (max-width: 520px)
+    .Meditation-wrapper
+        .paper
+            width: auto
+            height: auto
+            padding: 20px
+            margin: 10px 0
+            border-radius: 15px
+            background-image: none
+            background: linear-gradient(0deg, #C3EEE8 26.37%, rgba(195, 226, 222, 0.75) 63.87%, rgba(231, 243, 242, 0.4) 103.6%)
+
+@media (max-width: 415px)
+    .Meditation-wrapper
+        .paper
+            &-text
+                width: auto
+                height: auto
+
+            &-button
+                width: auto
+                height: auto
+                margin: 10px
+                font-size: 20px
