--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -14,11 +14,7 @@
             &-active
                 width: 749px
                 height: 224px
-                background-image: url(../figma/Mediation/img/Meditation-item__article-active-cut.png)
-                &-arrow
-                    display: flex !important
-                    justify-content: flex-end
-                    padding-right: 70px
+                background-image: url(../figma/Mediation/img/Meditation-item__article-active-cut-with-arrow.png)
 
             &-title
                 padding-top: 50px
@@ -40,6 +36,15 @@
                 width: 689px
                 height: 116px
                 color: rgba(0, 0, 0, 0.5)
+
+            &-arrow
+                display: flex !important
+                justify-content: flex-end
+                margin-right: 77px
+                margin-top: -20px
+                a
+                    width: 102px
+                    height: 24px
 
 @media (max-width: 830px)
     .Meditation
