--- a/figma/Mediation/sass/header.sass
+++ b/figma/Mediation/sass/header.sass
@@ -9,6 +9,9 @@
     align-items: center
     justify-content: space-between
     min-height: 70px
+    a
+        img
+            margin-top: 8px
 
 body.lockMeditation
     overflow: hidden
