--- a/figma/SOS/sass/backgrounds.sass
+++ b/figma/SOS/sass/backgrounds.sass
@@ -12,6 +12,9 @@
     background-size: cover
     transition: 1s
 
+.backgrounds-img
+    display: none
+
 @media (max-width: 750px)
     .backgrounds
         display: none
