--- a/Andrusha-main/sass/education.sass
+++ b/Andrusha-main/sass/education.sass
@@ -9,9 +9,10 @@
 
     &-item
         background-color: $vbr-color
-        width: 300px
-        height: 250px
+        width: 350px
+        height: 350px
         color: white
+        font-size: 18px
         border-radius: 20px
         text-align: center
         margin: 20px
@@ -23,6 +24,7 @@
 
         p
             margin: 0 auto
+            padding: 8px 0
 
 @media ( max-width: 500px )
     .container
@@ -38,3 +40,6 @@
 
         &-item
             text-align: center
+
+            p
+                padding: 3px 0
