--- a/sass/style.sass
+++ b/sass/style.sass
@@ -59,6 +59,6 @@
 @import "../figma/Mediation/sass/footer"
 @import "../figma/Mediation/sass/header"
 
-@import "../Andrusha-main/sass/catalog"
-@import "../Andrusha-main/sass/education"
-@import "../Andrusha-main/sass/person"
+@import "../Andrusha/sass/catalog"
+@import "../Andrusha/sass/education"
+@import "../Andrusha/sass/person"
