--- a/css/style.css
+++ b/css/style.css
@@ -4258,17 +4258,18 @@ li {
   cursor: pointer;
   transition: 0.5s;
 }
-.ZEN-header__button:hover {
-  border: 1px solid red;
-  background: rgba(255, 0, 0, 0.2);
-  box-shadow: 0px 0px 20px #ff6781;
-}
-.ZEN-header__button-text {
+.ZEN-header__button a {
   text-align: center;
   margin-top: 10px;
   font-weight: 400;
   font-size: 18px;
   color: #222;
+  width: 100%;
+}
+.ZEN-header__button:hover {
+  border: 1px solid red;
+  background: rgba(255, 0, 0, 0.2);
+  box-shadow: 0px 0px 20px #ff6781;
 }
 
 body.lockZEN {
