--- a/figma/ZEN/sass/headerNew.sass
+++ b/figma/ZEN/sass/headerNew.sass
@@ -58,17 +58,18 @@ li
         cursor: pointer
         transition: 0.5s
 
+        a
+            text-align: center
+            margin-top: 10px
+            font-weight: 400
+            font-size: 18px
+            color: #222
+            width: 100%
+
     &__button:hover
         border: 1px solid red
         background: rgba(255, 0, 0, 0.2)
         box-shadow: 0px 0px 20px #ff6781
-
-    &__button-text
-        text-align: center
-        margin-top: 10px
-        font-weight: 400
-        font-size: 18px
-        color: #222
 
 body.lockZEN
     overflow: hidden
