--- a/css/style.css
+++ b/css/style.css
@@ -1927,6 +1927,9 @@ html:hover .spider {
     width: 15px;
     height: 15px;
   }
+  .status .clock {
+    font-size: 12px;
+  }
 }
 @media (max-width: 380px) {
   .CalcButton {
