--- a/css/style.css
+++ b/css/style.css
@@ -1916,19 +1916,27 @@ html:hover .spider {
     font-size: 24px;
   }
 
-  .status .signal {
+  .top-bar .status .signal {
     width: 15px;
     height: 8px;
   }
-  .status .mts {
+  .top-bar .status .mts {
     font-size: 12px;
   }
-  .status .wifi {
+  .top-bar .status .wifi {
     width: 15px;
     height: 15px;
   }
-  .status .clock {
+  .top-bar .clock {
     font-size: 12px;
+  }
+  .top-bar .battery-text {
+    font-size: 12px;
+  }
+  .top-bar .battery-logo img {
+    width: 32px;
+    height: 42px;
+    padding-bottom: 21px;
   }
 }
 @media (max-width: 380px) {
