--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -129,6 +129,7 @@
     text-transform: uppercase
 
 .button-yellow
+    display: block
     margin: 0 auto
     position: relative
     margin-top: 28.55px
