--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -17,6 +17,8 @@
     font-weight: 700
     font-size: 24px
     line-height: 24px
+    letter-spacing: 3px
+    text-transform: uppercase
 
 .s5h1-main
     margin-top: 20px
@@ -25,7 +27,7 @@
     text-transform: uppercase
     font-size: 80px
     line-height: 80px
-    letter-spacing: 3px
+    letter-spacing: 4px
 
 .s5h1-text
     margin-top: 20px
@@ -44,17 +46,15 @@
     border-radius: 4px
     cursor: pointer
     transition: 0.5s
+    color: black
+    font-weight: 700
+    font-size: 16px
+    line-height: 48px
+    font-family: Open Sans
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
         border: 1.5px solid darkred
-
-    &-text
-        color: black
-        font-weight: 700
-        font-size: 16px
-        line-height: 22px
-        font-family: Open Sans
 
 .reviewsSOS
     position: relative
