--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -15,6 +15,7 @@
     padding-top: 145px
     font-size: 24px
     line-height: 24px
+    letter-spacing: 3px
     font-family: Bebas Neue
 
 .s4-h1main-text
@@ -26,6 +27,7 @@
     font-size: 60px
     font-family: Bebas Neue
     line-height: 45px
+    letter-spacing: 4px
 
 .TableSOS-wrapper
     width: 60%
