--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -118,6 +118,8 @@
     text-align: center
     text-transform: uppercase
     color: white
+    line-height: 80px
+    letter-spacing: 4px
 
 .sub-title
     margin-top: 40px
@@ -127,6 +129,8 @@
     text-align: center
     color: white
     text-transform: uppercase
+    line-height: 24px
+    letter-spacing: 2px
 
 .button-yellow
     display: block
@@ -219,3 +223,7 @@
 
         100%
             margin-top: 470px
+
+@font-face
+    font-family: Bebas Neue
+    src: url(../figma/SOS/webfonts/BebasNeue-Regular.ttf)
