--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -14,23 +14,26 @@
     justify-content: flex-end
 
 .SOS-S3-wrapper
-    margin: 15% 10% 0 0
+    margin: 15% 20% 0 0
 
 .S3-h1up-text
     color: white
     text-transform: uppercase
     font-family: Bebas Neue
-    font-weight: 700
+    font-weight: 500
     font-size: 24px
     line-height: 24px
+    letter-spacing: 2px
 
 .S3-h1main-text
     margin-top: 30px
     color: white
     text-transform: uppercase
     font-family: Bebas Neue
-    font-weight: 700
+    font-weight: 500
     font-size: 80px
+    line-height: 80px
+    letter-spacing: 4px
     font-style: normal
 
 .SOS-s3-menu__inner
@@ -62,10 +65,11 @@
     .s3h1
         color: #ffb548
         font-size: 36px
-        font-weight: 700
+        font-weight: 500
         font-family: Bebas Neue
         padding: 10px 0
         line-height: 36px
+        letter-spacing: 3px
 
         &::before
             content: ''
@@ -91,10 +95,11 @@
     & .s3h2
         color: #ffb548
         font-size: 36px
-        font-weight: 700
+        font-weight: 500
         font-family: Bebas Neue
         padding: 10px 0
         line-height: 36px
+        letter-spacing: 3px
 
         &::before
             content: ''
@@ -120,10 +125,11 @@
     & .s3h3
         color: #ffb548
         font-size: 36px
-        font-weight: 700
+        font-weight: 500
         font-family: Bebas Neue
         padding: 10px 0
         line-height: 36px
+        letter-spacing: 3px
 
         &::before
             content: ''
