--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -19,6 +19,8 @@
     font-weight: 700
     font-size: 24px
     line-height: 24px
+    letter-spacing: 2px
+    text-transform: uppercase
 
 .s5h1-main
     margin-top: 20px
@@ -46,17 +48,17 @@
     border-radius: 4px
     cursor: pointer
     transition: 0.5s
+    color: black
+    font-weight: 700
+    font-size: 16px
+    line-height: 22px
+    line-height: 58px
+    text-align: center
+    font-family: Open Sans
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
         box-shadow: 0px 0px 50px #d39013
-
-    &__text
-        color: black
-        font-weight: 700
-        font-size: 16px
-        line-height: 22px
-        font-family: Open Sans
 
 .SOS-s5-right
     margin-top: 110px
@@ -180,15 +182,14 @@
         .s5h1-text
             text-align: center
             padding-top: 20px
+            padding-bottom: 20px
             margin: 0 auto
 
-        .Read-more__inner
+        .Read-more
             display: block
             margin-top: 20px
-
-            .Read-more
-                display: block
-                margin: 0 auto
+            display: block
+            margin: 0 auto
 
     .SOS-s5-right
         margin-top: 5px
