--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -25,19 +25,22 @@
 .s6h1-up
     margin-top: 220px
     color: white
-    font-weight: 700
+    font-weight: 500
     font-size: 24px
     line-height: 24px
     text-transform: uppercase
+    font-family: Bebas Neue
+    letter-spacing: 3px
 
 .s6h1-main
     margin-top: 30px
     color: white
-    font-weight: 700
-    font-size: 60px
-    line-height: 60px
+    font-weight: 500
+    font-size: 80px
+    line-height: 80px
     text-transform: uppercase
     font-family: Bebas Neue
+    letter-spacing: 4px
 
 .s6h1-text
     margin-top: 30px
@@ -99,32 +102,30 @@
     border-radius: 4px
     font-size: 16px
     font-weight: 700
+    width: 250px
+    height: 50px
+    border: none
+    color: black
+    font-size: 16px
+    text-align: center
+    line-height: 48px
+    cursor: pointer
+    font-weight: 700
+    font-family: Open Sans
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
         box-shadow: 0px 0px 50px #d39013
 
-    button
-        width: 250px
-        height: 50px
-        background: transparent
-        border: none
-        color: black
-        font-size: 16px
-        cursor: pointer
-        font-weight: 700
-        font-family: Open Sans
-        animation: animate-Subscribe 1s ease infinite
+    @keyframes animate-Subscribe
+        0%
+            transform: scale(1)
 
-        @keyframes animate-Subscribe
-            0%
-                transform: scale(1)
+        50%
+            opacity: 0.7
 
-            50%
-                opacity: 0.7
-
-            100%
-                transform: scale(1.2)
+        100%
+            transform: scale(1.2)
 
 @media (max-width: 1800px)
     .email
