--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -22,8 +22,9 @@
         text-transform: uppercase
         line-height: 80px
         width: 600px
-        font-weight: 700
-        font-size: 60px
+        font-weight: 500
+        font-size: 80px
+        letter-spacing: 4px
         font-family: Bebas Neue
 
     .textSectionTwo
