--- a/figma/Mediation/sass/gym.sass
+++ b/figma/Mediation/sass/gym.sass
@@ -11,7 +11,7 @@
             font-family: Heebo
             font-weight: 500
             font-size: 32px
-            line-height: 47px
+            line-height: 58px
             color: rgba(0, 0, 0, 0.8)
 
         &__text
@@ -21,6 +21,23 @@
             line-height: 31px
             color: rgba(0, 0, 0, 0.5)
             width: 619px
+
+        &__button
+            width: 210px
+            height: 55px
+            background: linear-gradient(#259385 100%, #159685 100%)
+            border-radius: 30px
+            text-align: center
+            color: white
+            font-weight: 400
+            font-size: 24px
+            line-height: 53px
+            margin: 0 auto
+            margin-top: 30px
+            transition: 0.5s
+
+            &:hover
+                box-shadow: 0px 0px 50px #268a79
 
 @media (max-width: 1650px)
     .gym
@@ -45,6 +62,10 @@
             &__text
                 margin: 0 auto
                 text-align: center
+
+            &__button
+                display: block
+                margin: 8 auto
 
 @media (max-width: 780px)
     .gym
