--- a/sass/style.sass
+++ b/sass/style.sass
@@ -62,3 +62,4 @@
 @import "../Andrusha/sass/catalog"
 @import "../Andrusha/sass/education"
 @import "../Andrusha/sass/person"
+@import "../Andrusha/sass/social-network"
