--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,23 +1,23 @@
 @import "Global/variable"
 @import "Global/global"
 @import "Global/fonts"
-@import "Global/BreadCrumns"
-@import "main/articles"
-@import "main/games"
-@import "main/reviews"
-@import "main/slider2"
-@import "article/PackOfMoney"
-@import "article/ArticleContent"
-@import "GamesList/GamesList"
-@import "GamesOne/GamesOne"
-@import "GamesOne/GamesOne-Button"
-@import "GamesOne/GamesOne-Tabs"
-@import "Global/footer/footer1"
-@import "Global/footer/footer-link"
-@import "Global/footer/footer2-logo"
-@import "Global/footer/footer2-content"
-@import "Global/footer/footer2-Andrusha-Editions"
-@import "Global/footer/footer-social-network"
+// /** @import "Global/BreadCrumns"
+// @import "main/articles"
+// @import "main/games"
+// @import "main/reviews"
+// @import "main/slider2"
+// @import "article/PackOfMoney"
+// @import "article/ArticleContent"
+// @import "GamesList/GamesList"
+// @import "GamesOne/GamesOne"
+// @import "GamesOne/GamesOne-Button"
+// @import "GamesOne/GamesOne-Tabs"
+// @import "Global/footer/footer1"
+// @import "Global/footer/footer-link"
+// @import "Global/footer/footer2-logo"
+// @import "Global/footer/footer2-content"
+// @import "Global/footer/footer2-Andrusha-Editions"
+// @import "Global/footer/footer-social-network" **/
 @import "Global/header/header"
 @import "Global/header/header-link"
 @import "Global/header/popap-enter"
