--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,14 +18,7 @@
 // @import "Global/footer/footer2-content"
 // @import "Global/footer/footer2-Andrusha-Editions"
 // @import "Global/footer/footer-social-network" **/
-@import "Global/header/header"
-@import "Global/header/header-link"
-@import "Global/header/popap-enter"
-@import "Global/header/popap-registration"
-@import "Global/pageUp"
-@import "404/spider2"
-@import "404/Title"
-@import "Global/advertisement"
+
 @import "../app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS"
 @import "../app/TicTacToe/sass/TicTacToe"
 @import "../figma/SOS/sass/sectionOne"
@@ -63,3 +56,4 @@
 @import "../Andrusha/sass/education"
 @import "../Andrusha/sass/person"
 @import "../Andrusha/sass/social-network"
+@import "../Andrusha/sass/pageUp"
