--- a/sass/Global/fonts.scss
+++ b/sass/Global/fonts.scss
@@ -1,3 +1,5 @@
+//icomoon
+
 @font-face {
   font-family: 'icomoon';
   src:  url('../fonts/icomoon.eot?xx996d');
@@ -34,3 +36,7 @@
 .icon-folder:before {
   content: "\e92f";
 }
+
+
+//fontawesome
+
