--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -19,10 +19,11 @@ html
         transition: 0.5s
 
         &-h1
-            font-weight: 400
+            font-weight: 500
             font-size: 36px
             line-height: 34px
             transition: 0.5s
+            font-family: Nunito
 
         &-text
             padding: 22px 0
@@ -30,6 +31,7 @@ html
             font-weight: 400
             font-size: 18px
             transition: 0.5s
+            line-height: 25px
 
 .ZEN-section__img
     img
@@ -105,3 +107,7 @@ html
 
     .ZENs7h
         margin-top: 60px
+
+@font-face
+    font-family: Nunito
+    src: url(../figma/ZEN/fonts/Nunito.ttf)
