--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -9,6 +9,7 @@
         &-topic
             font-size: 16px
             font-weight: 400
+            font-family: Nunito
             color: #222
             cursor: pointer
             transition: 0.5s
