--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -12,13 +12,18 @@
             font-weight: 400
             font-size: 16px
             transition: 0.5s
+            line-height: 27px
+            i
+                font-size: 27px
+                vertical-align: middle
 
         &-h1
             margin-top: 23px
             color: #222
             font-weight: 400
             font-size: 42px
-            width: 370px
+            width: 423px
+            line-height: 43px
 
             &-2
                 margin-top: 20px
