--- a/figma/ZEN/sass/section8.sass
+++ b/figma/ZEN/sass/section8.sass
@@ -1,4 +1,9 @@
 .ZEN-section8-button
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+    width: 400px
+    margin: 0 auto
     img
         border-radius: 0
 
@@ -10,5 +15,14 @@
 
 @media ( max-width: 450px)
     .ZEN-section8-button
-        display: block
+        display: flex
+        flex-direction: column
+        justify-content: center
         margin: 0 auto
+        height: 100%
+        width: 100%
+
+        img
+            display: block
+            margin: 0 auto
+            padding: 10px
